deployment-spec-with-volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brahe
spec:
  replicas: 3
  selector:
    matchLabels:
      run: brahe
  template:
    metadata:
      labels:
        run: brahe
    spec:
      containers:
      - name: brahe
        image: registry.lan/brahe:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: marian-raid
          mountPath: /mnt/raid
          readOnly: false
      imagePullSecrets:
      - name: registry.lan
      volumes:
      - name: marian-raid
        persistentVolumeClaim:
          claimName: marian-raid-claim
