service-spec.yml
apiVersion: v1
kind: Service
metadata:
  name: brahe
  labels:
    run: brahe
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: brahe
