ingress-resource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: brahe-ingress
spec:
  rules:
  - host: brahe.net
    http:
      paths:
      - backend:
          serviceName: brahe
          servicePort: 80
